css/style190412.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
body {
  margin: 0px;
  overflow: hidden;
  font-family: 'Open Sans Condensed', sans-serif;
}

h2 {
  margin-bottom: 0px;
  margin: 0px;
}

a {
  color: #999999;
  text-decoration:none;
}

a:hover {
  text-decoration:underline;
}

ul {
  list-style-type:none;
}

li {
  font-size:60px;
  margin:0px;
}

/* Fonts */
.footer{
  color: #CCCCCC;
  text-align: center;
  font-family: verdana, sans-serif;
  font-size: small;
  font-weight:100;
}

/* Circles */
.button_show, .body_front, .body_instructions, .body_services {
  position: fixed;
  border: 1px solid black;
  margin: 20px;
  text-align:center;
  background:#FFFFFF;
  opacity:.75;
}

/* Buttons */
.button_services {
  border: 1px solid black;
  margin: 20px;
  background-color: #000000;
  color: #ffffff;
  text-align:center;
  opacity:.75;
}

.button_show {
  top:0%;
  font-size:24px;
  width:auto;
  background-color: #ffffff;
  width: 40px;
  height: 40px;
  -moz-border-radius: 40px;
  -webkit-border-radius: 40px;
  border-radius: 40px;
  padding: 20px;
}

/* Tiny icon buttons */
.button_instructions, .button_accessibility, .button_menu {
  display:block;
  position: fixed;
  left: 20px;
  border: 0px solid black;
  width:auto;
  width: 20px;
  height: 20px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
  border-radius: 20px;
  padding: 3px;
  background: #FFFFFF;
  opacity: .9;
}

.button_instructions {
  top: 180px;
}

.button_menu {
  top: 150px;
}

.button_accessibility {
  top: 120px;
}

/* Body Containers */
.body_front, .body_instructions, .body_services {
  position:fixed;
  font-size: 32px;
  opacity:.85;
  display:block;
}

.body_front {
  top:3px;
  left:1%;
  width: 450px;
  height: 450px;
  -moz-border-radius: 450px;
  -webkit-border-radius: 450px;
  border-radius: 450px;
  padding: 60px;
}

/* Containers: Organizational */
.footer {
  position:fixed;
  bottom: 0%;
  left: 0%;
  width: 100%;
  background-color: black;
  margin:0px;
  height:50px;
  opacity:.75;
}

.hide {
  display:none;
}

.main {
  margin: 0px;
  padding: 0px;
}

.tooltip {
  position:fixed;
  left: 44%;
  bottom:5%;
  padding: 50px;
  margin: 100px;
  font-style:italic;
  width: 100px;
  height: 100px;
  -moz-border-radius: 100px;
  -webkit-border-radius: 100px;
  border-radius: 100px;
  font-size:22px;
  background-color:#666666;
  color:#FFFFFF;
}

/* Behaviors */
.button_services:hover {
  background-color: #331970;
  color: #ffffff;
}

.button_show:hover ~ .hide {
  display:block;
}

.button_show:hover {
  background-color: #000000;
  color: #FFFFFF;
}

/* Mobile only */
@media screen and (max-width: 1200px) {
  html {
    background: url(../images/bg.png) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
  }

  .hide {
    display:block;
  }

  .button_show {
    display:none;
  }

  .button_services {
    position: fixed;
    top:50px;
    width:auto;
    width: 130px;
    height: 130px;
    -moz-border-radius: 130px;
    -webkit-border-radius: 130px;
    border-radius: 130px;
    padding: 50px;
    font-size: 50px;
    opacity: .85;
  }

  .body_front, .body_services, .body_instructions {
    position:fixed;
    top:120px;
    left:30px;
    width: 650px;
    height: 650px;
    -moz-border-radius: 650px;
    -webkit-border-radius: 650px;
    border-radius: 650px;
    padding: 100px;
    font-size: 50px;
  }

  .body_front {
    opacity:.90;
  }

  .body_services {
    opacity:.85;
    display:none;
    overflow: visible;
  }

  .body_instructions {
    display:none;
  }

  .footer {
    font-size: 32px;
    height:100px;
    opacity: .85;
  }

  .button_instructions, .button_accessibility, .button_menu {
    display:block;
    position: fixed;
    bottom: 200px;
    border: 0px solid black;
    width:auto;
    width: 20px;
    height: 20px;
    -moz-border-radius: 20px;
    -webkit-border-radius: 20px;
    border-radius: 20px;
    padding: 3px;
    background: #FFFFFF;
    opacity: .9;
  }

  .button_instructions {
    left: 180px;
  }

  .button_menu {
    left: 150px;
  }

  .button_accessibility {
    left: 120px;
  }

  .button_services:hover ~ .body_services {
    display:block;
  }

  .button_services:hover ~ .body_front{
    display:none;
  }
}

